# plutus-cborhex-automation

./: CHANGELOG.md  Dockerfile  README.md  cabal.project  plutus-cborhex-automation.cabal  sidan-plutus-server.cabal
.github/workflows/: fourmolu.yml  haskell.yml
documentation/: APIDoc.md  Deployment-AWS.md  Deployment.md  EndpointGuide.md
example/: CHANGELOG.md  README.md  cabal.project  example.cabal  gimbalabs-example.cabal
example-validator/: README.md  VMSetup.md  cabal.project  example-validator.cabal
example-validator/developmentDoc/: ec2Ubuntu.md  localUbuntu.md
example-validator/scripts/: testingValidator.plutus
example-validator/src/: ParamScriptAPI.hs  SIDANPlutusServer.hs  TestingValidator.hs  Utils.hs
example/app/: Main.hs
example/dev/: DevelopmentSourceCode.hs
example/output/: reference-validator-v001.plutus
example/src/: ParamDemoValidator.hs  ParamScriptAPI.hs  TestingValidator.hs
example/src/ContributorToken/: Compiler.hs  ReferenceValidator.hs  Types.hs
example/src/Dev/: DevDefaultOrphans.hs  DevInstances.hs  DevPlutusServer.hs
example/src/Faucet/: FaucetValidatorCompiler.hs  FaucetValidatorScript.hs
example/src/GBTE/: ApprovalMinter.hs  Compiler.hs  EscrowValidator.hs  TreasuryValidator.hs  Types.hs
src/: ParamScriptAPI.hs  SIDANDefaultOrphans.hs  SIDANInstances.hs  SIDANPlutusServer.hs
test/: doctests.hs
