cabal-version:      2.4
name:               plutus-cborhex-automation
version:            0.1.0.0
synopsis:           This is the example library of simple plutus script for testing out automation of plutus cborhex generation.
description:        
bug-reports:        https://github.com/SIDANWhatever/plutus-cborhex-automation/issues
license:            MIT
author:             SIDANWhatever
maintainer:         wongkahinhinson@gmail.com
extra-source-files: CHANGELOG.md

common common-all
   default-language: Haskell2010
   ghc-options:      -Wall

library
   import:            common-all                   
   exposed-modules:   Utils
                    , TestingValidator
                    , ParamScriptAPI

   build-depends:     aeson
                    , base ^>=4.14.1.0
                    , deepseq >= 1.4.4.0
                    , bytestring
                    , cardano-api
                    , cardano-crypto-class
                    , cardano-ledger-core
                    , cardano-ledger-shelley
                    , cardano-wallet-core
                    , containers
                    , data-default
                    , freer-extras
                    , openapi3
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-pab
                    , plutus-tx-plugin
                    , plutus-tx
                    , plutus-use-cases
                    , prettyprinter
                    , serialise
                    , text
                    , html-entities
                    , plutus-script-utils
                    , Spock
   hs-source-dirs:   src
   ghc-options:     -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable plutus-cborhex-automation
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , plutus-cborhex-automation

    hs-source-dirs:   app
    default-language: Haskell2010
