cabal-version:      2.4
name:               sidan-plutus-server
version:            0.1.0.0
synopsis:           This is the library for automation of creating haskell server endpoints returning dynamica plutus script cborhex.
description:        
bug-reports:        https://github.com/SIDANWhatever/plutus-cborhex-automation/issues
license:            MIT
author:             SIDANWhatever, alexeusgr
maintainer:         wongkahinhinson@gmail.com, alexeusgr@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

common common-all
   default-language:   Haskell2010
   default-extensions: GADTs
                     , TypeApplications
                     , OverloadedStrings
   ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

library
   import:            common-all                   
   exposed-modules:   SIDANPlutusServer
                    , SIDANDefaultOrphans
                    , SIDANInstances
   hs-source-dirs:    src
   build-depends:     aeson
                    , bytestring
                    , cardano-api
                    , cardano-ledger-core
                    , plutus-ledger
                    , plutus-ledger-api
                    , serialise
                    , text
                    , Spock
                    , hvect ^>= 0.4.0.1
                    , base ^>=4.14.1.0
